@@ -1737,6 +1737,14 @@ div.sidenote .third {
 	margin : auto !important;
 }
 
+.limit { 
+	width: 128px;
+}
+
+.limit2 { 
+	width: 256px;
+}
+
 .top { 
 	vertical-align : top;
 }
